Hide item details from owned list in trading when the item is no longer visible in the list

--- a/chrome-extension/src/view/components/App.scss
+++ b/chrome-extension/src/view/components/App.scss
@@ -298,6 +298,7 @@ form label {
 .item-row img,
 .img-hover img {
     visibility: hidden;
+    align-self: center;
 }
 
 .table-diff tr:hover td img,
